# polyrover

./: CHANGELOG.md  Cargo.toml  PORT_PLAN.md  README.md  capabilities.json
.github/workflows/: rust.yml
docs/: endpoint-capability-matrix.md
docs/superpowers/specs/: 2026-07-16-universal-async-sdk-design.md
src/: auth.rs  bridge.rs  capabilities.rs  client.rs  clob.rs  clob_orders.rs  config.rs  crypto_price.rs  data.rs  data_types.rs  error.rs  gamma.rs  intel.rs  jsonx.rs  lib.rs  main.rs  market_data.rs  market_resolver.rs  market_results.rs  output.rs  paper.rs  simulation.rs  stream.rs  stream_client.rs  transport.rs  types.rs  user_stream.rs  wallet.rs
tests/: cli.rs  client.rs  feature_contract.rs  market_results.rs
